--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -18,88 +18,141 @@
         <div class="container p-3 mb-2 bg-dark text-white">
             <div class="row justify-content-center mt-5">
                 <div class="col-md-10 col-sm-12 text-center">
-                    <h1 class="display-10">About Us Page</h1>
-                    <p> We Are TouGrass</p>
+                    <h1 class="display-10">About Us</h1>
+                    <p> We Are TouGrass.</p>
                 </div>
             </div>
         </div>
           
-        <h2 class="text-center mt-5 p-3 mb-2">Our Team</h2>
+        <h2 class="text-center mt-5 p-3 mb-2 border-bottom">Our Team</h2>
 
         <div class="container mt-5">
 
             <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
+                <div class="col mt-5 mb-5">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Le Mai Minh Quan</h5>
-                            <p class="card-text lh-sm">Email : 
-                                <a class="text-decoration-none" href="mailto:lmmquan21@clc.fitus.edu.vn">lmmquan21@clc.fitus.edu.vn</a>
+                            <img src="{% static 'app/image/hcmus_logo.png' %}" class="rounded mx-auto d-block" alt="..." width="175" height="150">
+                            <h5 class="card-title mt-4 mb-4">Le Mai Minh Quan</h5>
+                            <p class="card-text lh-sm">
+                                <span class="fw-semibold">Email : </span>
+                                lmmquan21@clc.fitus.edu.vn
                             </p>
-                            <p class="card-text lh-sm">Student ID : 21127401</p>
+                            <p class="card-text lh-sm">
+                                <span class="fw-semibold"> Student ID : </span>
+                                21127401
+                            </p>
+                            <p class="card-text lh-sm mt-4">
+                                <span class="badge text-bg-primary">Full Stack Developer</span>
+                                <span class="badge text-bg-success">Tester</span>
+                            </p>
+                            <div class = "text-center">
+                                <a type="button" class="btn btn-secondary mt-4" href="mailto:lmmquan21@clc.fitus.edu.vn">Contact</a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 
-                <div class="col">  
+                <div class="col mt-5 mb-5">  
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Nguyen Huu Thanh Lan</h5>
-                            <p class="card-text lh-sm">Email : 
-                                <a class="text-decoration-none" href="mailto:nhtlan21@clc.fitus.edu.vn">nhtlan21@clc.fitus.edu.vn</a>
+                            <img src="{% static 'app/image/hcmus_logo.png' %}" class="rounded mx-auto d-block" alt="..." width="175" height="150">
+                            <h5 class="card-title mt-4 mb-4">Nguyen Huu Thanh Lan</h5>
+                            <p class="card-text lh-sm">
+                                <span class="fw-semibold">Email : </span>
+                                nhtlan21@clc.fitus.edu.vn
                             </p>
-                            <p class="card-text lh-sm">Student ID : 21127520</p>
+                            <p class="card-text lh-sm">
+                                <span class="fw-semibold"> Student ID : </span>
+                                21127520
+                            </p>
+                            <p class="card-text lh-sm mt-4">
+                                <span class="badge text-bg-primary">Full Stack Developer</span>
+                                <span class="badge text-bg-success">Tester</span>
+                            </p>
+                            <div class = "text-center">
+                                <a type="button" class="btn btn-secondary mt-4" href="mailto:nhtlan21@clc.fitus.edu.vn">Contact</a>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col">    
+                <div class="col mt-5 mb-5">    
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Vo Quang Vinh</h5>
-                            <p class="card-text lh-sm">Email : 
-                                <a class="text-decoration-none" href="mailto:vqvinh21@clc.fitus.edu.vn">vqvinh21@clc.fitus.edu.vn</a>
+                            <img src="{% static 'app/image/hcmus_logo.png' %}" class="rounded mx-auto d-block" alt="..." width="175" height="150">
+                            <h5 class="card-title mt-4 mb-4">Vo Quang Vinh</h5>
+                            <p class="card-text lh-sm">
+                                <span class="fw-semibold">Email : </span> 
+                                vqvinh21@clc.fitus.edu.vn
                             </p>
-                            <p class="card-text lh-sm">Student ID : 21127520</p>
+                            <p class="card-text lh-sm">
+                                <span class="fw-semibold"> Student ID : </span>
+                                21127732
+                            </p>
+                            <p class="card-text lh-sm mt-4">
+                                <span class="badge text-bg-primary">Full Stack Developer</span>
+                                <span class="badge text-bg-success">Tester</span>
+                            </p>
+                            <div class = "text-center">
+                                <a type="button" class="btn btn-secondary mt-4" href="mailto:vqvinh21@clc.fitus.edu.vn">Contact</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
+                <div class="col mt-4 mb-5">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Hoang Nhat Quang</h5>
-                            <p class="card-text lh-sm">Email : 
-                                <a class="text-decoration-none" href="mailto:hnquang21@clc.fitus.edu.vn">hnquang21@clc.fitus.edu.vn</a>
+                            <img src="{% static 'app/image/hcmus_logo.png' %}" class="rounded mx-auto d-block" alt="..." width="175" height="150">
+                            <h5 class="card-title mt-4 mb-4">Hoang Nhat Quang</h5>
+                            <p class="card-text lh-sm">
+                                <span class="fw-semibold">Email : </span>
+                                hnquang21@clc.fitus.edu.vn
                             </p>
-                            <p class="card-text lh-sm">Student ID : 21127520</p>
-                            <p class="card-text lh-sm">Role : Full Stack Developer, Tester</p>
+                            <p class="card-text lh-sm">
+                                <span class="fw-semibold"> Student ID : </span>
+                                21127543
+                            </p>
+                            <p class="card-text lh-sm mt-4">
+                                <span class="badge text-bg-primary">Full Stack Developer</span>
+                                <span class="badge text-bg-warning">Business Analyst</span>
+                                <span class="badge text-bg-danger">Team Leader</span>
+                            </p>
+                            <div class = "text-center">
+                                <a type="button" class="btn btn-secondary mt-4" href="mailto:hnquang21@clc.fitus.edu.vn">Contact</a>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col">  
+                <div class="col mt-4 mb-5">  
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Vo Duy Anh</h5>
-                            <p class="card-text lh-sm">Email : 
-                                <a class="text-decoration-none" href="mailto:vdanh21@clc.fitus.edu.vn">vdanh21@clc.fitus.edu.vn</a>
+                            <img src="{% static 'app/image/hcmus_logo.png' %}" class="rounded mx-auto d-block" alt="..." width="175" height="150">
+                            <h5 class="card-title mt-4 mb-4">Vo Duy Anh</h5>
+                            <p class="card-text lh-sm">
+                                <span class="fw-semibold">Email : </span>
+                                vdanh21@clc.fitus.edu.vn
                             </p>
-                            <p class="card-text lh-sm">Student ID : 21127520</p>
+                            <p class="card-text lh-sm">
+                                <span class="fw-semibold"> Student ID : </span>
+                                21127221
+                            </p>
+                            <p class="card-text lh-sm mt-4">
+                                <span class="badge text-bg-primary">Full Stack Developer</span>
+                                <span class="badge text-bg-warning">Business Analyst</span>
+                            </p>
+                            <div class = "text-center">
+                                <a type="button" class="btn btn-secondary mt-4" href="mailto:vdanh21@clc.fitus.edu.vn">Contact</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-                
             </div>
-
-            
-        
-        
-        </div>
-        
-        
+        </div>   
     </body>
 </html>
 
